# cubes

./: Cargo.toml  README.md
data/: cube.frag  cube.vert  cube_no_instancing.vert
src/: app.rs  cubes.rs  framework.rs  graphics.rs  main.rs
