[package]
name = "cubes"
version = "0.1.0"
authors = ["Ilya Bogdanov <ilya.bogdanov@xdev.re>"]
edition = "2018"

[features]
default = []
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]


[dependencies]
froggy = { git = "https://github.com/kvark/froggy", rev = "c10e2dd1ce8bdd194" }
structopt = "0.2"
cgmath = "0.17"
wgpu = "0.2.2"
env_logger = "0.6"
glsl-to-spirv = "0.1"
log = "0.4"
